# oop_labs

first/: CMakeLists.txt
first/include/: vowel_utils.h
first/src/: main.cpp  vowel_utils.cpp
first/tests/: test_vowel_remover.cpp
laba_2/: CMakeLists.txt
laba_2/include/: custom_vector.hpp  twelve.hpp
laba_2/src/: custom_vector.cpp  main.cpp  twelve.cpp
laba_2/test/: test_twelve.cpp
laba_3/: .gitignore  CMakeLists.txt
laba_3/include/: Figure.hpp  FigureVector.hpp  Hexagon.hpp  Octagon.hpp  Triangle.hpp
laba_3/src/: figure_vector.cpp  hexagon.cpp  main.cpp  octagon.cpp  triangle.cpp
laba_3/test/: figure_test.cpp
